# UAVDet

./: .gitignore  Dockerfile  README.md  VideoProcessor.py  app.py  pyproject.toml  testTimeline.py
scripts/: start.sh
uav_detector/: VideoProcessor.py  app.py  testTimeline.py
uav_detector/metadata/: drones_small.mp4.csv
