[tool.poetry]
name = "uav-detector"
version = "0.1.0"
description = ""
authors = ["Maly <swampinhabitant@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.32"
streamlit = "^1.35.0"
pillow-heif = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
