[tool.poetry]
name = "uav-detector"
version = "0.1.0"
description = ""
authors = ["Maly <swampinhabitant@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.32"
streamlit = "^1.35.0"
pillow-heif = "^0.16.0"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.2.0+cu121-cp310-cp310-win_amd64.whl", extras = ["cuda"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
